philly-311-citywide-meta/src/objects/GIS__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Organization-wide defaults for GIS and ESRI integration</description>
    <fields>
        <fullName>BaseMaps__c</fullName>
        <description>The address basemaps, separated by semicolons.  Don&apos;t include the entire URL, only the url AFTER /services/ in the ESRI base URL location.

For instance, BaseMaps/Aerial2010;BaseMaps/GrayBase</description>
        <label>BaseMaps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ESRIServices__c</fullName>
        <description>The URL of the ESRI ArcGIS server&apos;s &quot;services.&quot;  The current URL is &quot;http://gis.phila.gov/arcgis/rest/services&quot;</description>
        <label>ESRIServices</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GISRestEndpoint__c</fullName>
        <description>URL of the GIS REST service</description>
        <label>GISRestEndpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GeometryServer__c</fullName>
        <description>Base URL of the ESRI Geometry Server</description>
        <label>GeometryServer</label>
        <type>Url</type>
    </fields>
    <label>GIS</label>
</CustomObject>